--- a/resume.html
+++ b/resume.html
@@ -33,9 +33,9 @@
           <div class="content-wrapper">
               <div class="resume-wrapper">
                   <div class="resume-img-wrapper">
-                        <img src="images/NewResume.jpg>
+                        <img src="images/NewResume.jpg">
                   </div>
-              </div>
+              
             
                </div>
 
