--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
           <div class="content-wrapper">
               <div class="resume-wrapper">
                   <div class="resume-img-wrapper">
-                        <img src="images/NewResume1.jpg">
+                        <img src="images/NewResume.jpg">
                   </div>
               
             
